src/test/deca/syntax/valid/synt/float_with_F_suffix.deca
/*
    Description : Ajout du suffixe F à un nombre flottant

    Résultat : OK
*/
{
    float x = 5.2F;
}
