src/test/deca/syntax/invalid/synt/overflow_negative_float.deca
// @expected_output deca:8:14:
/*
    Description : Initialisation d'un float avec une valeur trop petite

    Résultat : OK
*/
{
    float x = -45000000000000000000000000000000000000000000000000000000000.0;
}
